--- a/estilos/formatacao.css
+++ b/estilos/formatacao.css
@@ -5,9 +5,9 @@ body {
 }
 
 .header {
-    background-image: url(../imagens/bg-3.jpg);
+    background-image: url(../imagens/bg-2.jpg);
     background-size: cover;
-    background-position: right center;
+    background-position: right bottom;
     margin-bottom: 25px;
     height: 500px;
     padding-top: 1px;
